src/styles/admin-styles/_products.scss
.dashboardProductBox {
  background-color: white;
  // padding: 2rem;
  overflow: auto;
  @include square(100%);
}

.createProductBtn {
  position: fixed;
  right: 2rem;
  top: 4rem;
  @include square(2.5rem);
  @include flex(row, center, center, 0);
  border-radius: 50%;
  background-color: rgb(201, 9, 9);
  color: white;
  &:hover {
    opacity: 0.8;
  }
}

.productDeleteBtn {
  background-color: rgb(56, 56, 56);
  color: white;
  font-size: 1.2rem;
  @include square(2.5rem);
  @include flex;
  border-radius: 50%;
  cursor: pointer;
  border: none;
  position: absolute;
  top: 3.5rem;
  right: 12rem;
  z-index: 1;
}

.productManagement {
  @include flex(row, center, unset);
  padding: 2rem;

  > section {
    overflow-y: auto;
    width: 100%;
    height: 85vh;
    max-width: 500px;
    padding: 5rem;
    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.216);
    background-color: white;
    @include flex(column, unset, unset, 1rem);
    position: relative;
    border-radius: 5px;
    > h2 {
      @include heading(2px);
      text-align: center;
    }

    > img {
      @include square(90%);
      align-self: center;
      object-fit: scale-down;
    }
    > strong {
      font-weight: 300;
    }
    > span {
      position: absolute;
      right: 2rem;
      top: 2rem;
    }
    > p {
      text-align: center;
      letter-spacing: 2px;
      text-transform: uppercase;
    }
    > h3 {
      text-align: center;
      font-weight: 2rem;
    }
  }

  > article {
    height: 85vh;
    width: 100%;
    max-width: 400px;
    padding: 2rem;
    background-color: white;
    border-radius: 5px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.216);
    > form {
      @include flex(column, unset, center, 2rem);
      > h2 {
        text-transform: uppercase;
        letter-spacing: 2px;
      }

      > div {
        width: 100%;
        position: relative;
        > label {
          position: absolute;
          top: -1.6rem;
          left: 0.5rem;
        }
        > input,
        textarea {
          @include inputStyle(
            100%,
            1rem,
            unset,
            1px solid rgba(13, 13, 13, 0.196)
          );
          border-radius: 5px;
        }
        > img {
          object-fit: scale-down;
          border-radius: 5px;
          border: 1px solid rgba(0, 0, 0, 0.877);
        }
      }

      > button {
        padding: 1rem;
        border: none;
        background-color: rgb(5, 107, 224);
        color: white;
        width: 100%;
        border-radius: 5px;
        font-size: 1.1rem;
        cursor: pointer;
      }
    }
  }
  .shippingInfoCard {
    > h1 {
      text-align: center;
      @include heading(2px);
    }

    > h5 {
      margin: 2rem 0 0 0.5rem;
      font-size: 1.1rem;
      font-weight: 700;
    }
    > p {
      margin: 0.5rem;
    }
    > button {
      margin: 1rem 0;
      padding: 1rem;
      border: none;
      background-color: rgb(5, 107, 224);
      color: white;
      width: 100%;
      border-radius: 5px;
      font-size: 1.1rem;
      cursor: pointer;
      &:hover {
        opacity: 0.8;
      }
    }
  }
}

.orderProductCard {
  @include flex(row, unset, center, 1rem);
  > img {
    @include square(4rem);
    object-fit: scale-down;
    border-radius: 5px;
  }
  > span {
    margin-left: auto; // push the span to the right
  }
}

.noData {
  text-align: center;
  font-size: 5rem;
  margin-top: 5rem;
}

